# researchos

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/researchos/: __init__.py  main.py  models.py
apps/api/researchos/agents/: __init__.py  cancellation.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/coding_agent/: __init__.py  router.py
apps/api/researchos/common/: __init__.py  asyncio_runner.py  base.py  celery_app.py  config.py  cookies.py  csrf.py  db.py  deps.py  errors.py  hashing.py  logging.py  middleware.py  pagination.py  paths.py  pubsub.py  rate_limit.py  redis.py  roles.py  security.py  session.py  slug.py  storage.py
apps/api/researchos/documents/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/experiments/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/git/: __init__.py  provider.py  router.py  schemas.py  service.py
apps/api/researchos/health/: router.py  schemas.py
apps/api/researchos/identity/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/llm_config/: __init__.py  models.py  router.py  schemas.py
apps/api/researchos/migrations/: env.py
apps/api/researchos/organizations/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/patches/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/projects/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/research/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/researchos/runtime/: __init__.py
apps/api/researchos/seed/: __init__.py  (+1 more)
apps/api/tests/: conftest.py  helpers.py  test_agent_runtime.py  test_agents_api.py  test_auth.py  test_coding_agent.py  test_experiments.py  test_health.py  test_ide_permissions.py  test_ideas.py  test_organizations.py  test_paper.py  test_paper_library.py  test_paper_search.py  test_patches.py  test_permissions.py  test_projects.py  test_research_permissions.py  test_skills.py  test_worker_loop_regression.py  test_workspace_security.py  test_ws_contract.py
apps/worker/: README.md  pyproject.toml
apps/worker/researchos_worker/: __init__.py  app.py  queues.py
apps/worker/tests/: test_health_task.py
(+176 files in other folders)
