[project]
name = "researchos-api"
version = "0.0.0"
description = "ResearchOS API — FastAPI backend (Phase 0 infrastructure)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "httpx>=0.27",
    "structlog>=24.4",
    "pwdlib[argon2]>=0.2.1",
    "email-validator>=2.2",
    "itsdangerous>=2.2",
    "feedparser>=6.0",
    "celery>=5.4",
]

[project.optional-dependencies]
# Real LLM provider adapters live behind config; not required for tests, which
# always use the mock provider.
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["researchos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (Depends/Query/Path/...) as argument defaults by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
