[project]
name = "researchos-worker"
version = "0.0.0"
description = "ResearchOS Celery worker (Phase 0 infrastructure)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4",
    "redis>=5.2",
    # Shared configuration, logging, and connectivity probes live in the API
    # package; the worker reuses them to stay DRY.
    "researchos-api",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv.sources]
researchos-api = { path = "../api", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["researchos_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
